# helios

./: CMakeLists.txt  resources.qrc
.github/workflows/: cmake-single-platform.yml
qml/: main.qml
src/: CMakeLists.txt  main.cpp
